<resources>
    <string name="app_name">Weather Forecas Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="k">K</string>
    <string name="f">°F</string>
    <string name="c">°C</string>
    <string name="miles_hour">miles/hour</string>
    <string name="metre_sec">metre/sec</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="notifications">Notifications</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="confirm">Confirm</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="alert_type">Alert type:</string>
    <string name="start_date_and_time">Start Date and Time:</string>
    <string name="end_date_and_time">End Date and Time:</string>
    <string name="select_start_date_and_time">Select start date and time</string>
    <string name="select_end_date_and_time_optional">Select end date and time (optional)</string>
    <string name="everything_is_fine_in_that_area">Everything is fine in that area</string>
    <string name="be_careful_of_the_weather_in_that_area_as_there_are_warnings">Be careful of the weather in that area, as there are warnings</string>
    <string name="the_temperature_now_is">the temperature now is %1$s</string>
    <string name="at">at: %1$s</string>
    <string name="from_to">from: %1$s\nto: %2$s</string>
    <string name="cloudiness">cloudiness</string>
    <string name="wind_direction">wind direction</string>
    <string name="pressure">pressure</string>
    <string name="uv">UV</string>
    <string name="humidity">humidity</string>
    <string name="wind">wind</string>
    <string name="make_sure_you_are_connected_to_the_internet">Make sure you are connected to the Internet</string>
    <string name="your_locations">Your locations:</string>
</resources>