<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="36dp"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_type"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/alert_type"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@id/cg_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@id/tv_start_date_time_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_type"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alarm"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:textColor="@color/red" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:id="@+id/chip_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textColor="@color/red" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tv_start_date_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/start_date_and_time"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_start_date_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cg_type" />

    <TextView
        android:id="@+id/tv_start_date_time"
        style="@style/text_withe_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/tv_end_date_time_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_date_time_title"
        android:text="@string/select_start_date_and_time" />

    <TextView
        android:id="@+id/tv_end_date_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/end_date_and_time"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_end_date_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_date_time" />

    <TextView
        android:id="@+id/tv_end_date_time"
        style="@style/text_withe_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_end_date_time_title"
        android:text="@string/select_end_date_and_time_optional" />

    <TextView
        android:id="@+id/tv_locations_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/your_locations"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/rv_locations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_end_date_time" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:itemCount="5"
        tools:listitem="@layout/location_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_locations_title"
        app:layout_constraintBottom_toTopOf="@id/tv_type_title"/>

    <TextView
        android:id="@+id/tv_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Alert Type:"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/rv_types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_locations" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:itemCount="5"
        tools:listitem="@layout/location_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_type_title"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"/>


    <Button
        android:id="@+id/btn_confirm"
        style="@style/button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="30dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_types" />


</androidx.constraintlayout.widget.ConstraintLayout>